--- a/src/WpfRiotSlider/WpfRiotSlider.csproj
+++ b/src/WpfRiotSlider/WpfRiotSlider.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Jamesnet.Wpf" Version="1.0.0.110" />
+  </ItemGroup>
+
 </Project>
